              (2007), no. 3, 527--571.
        Class NNormalSurface:
            - New routine locallyCompatible() for testing intersections
              between normal surfaces.
            - New routine rawVector() that gives direct read-only access to
              the underlying vector in case this is needed.
        Class NPerm:
            - Deprecated the setPerm() routines; these are unnecessary
              because NPerm objects are very small and can just be copied
              around using the assignment operator.
        Class NTetrahedron:
            - Renamed getAdjacentTetrahedron(), getAdjacentTetrahedronGluing()
              and getAdjacentFace() to adjacentTetrahedron(), adjacentGluing()
              and adjacentFace(), which should be somewhat easier on the
              fingers.  The old names are still available for backward
              compatibility, but they are now deprecated and will be removed
              in some future version of Regina.
            - Proofreading and clarification for some of the older and more
              opaque parts of the documentation.
        Class NTriangulation:
            - New routines isBall() and knowsBall() for recognising the
              3-dimensional ball.
            - Fixed a nasty bug in the is-it-valid test for shellBoundary().
              This bug had the potential to cause a crash when simplifying
              triangulations with boundary.  It also had the potential to
              give incorrect results when (and only when) simplifying
              the 1-tetrahedron 3-vertex ball; the result would be that
              the ball "simplified" to the empty triangulation.
            - Routines isZeroEfficient() and hasSplittingSurface() now
              operate on a clone of the triangulation, to avoid triggering
              changes to the packet tree.
        Routine edgeOrdering(), faceOrdering():
            - Deprecated these routines, in favour of the new NEdge::ordering[]